<?xml version="1.0" encoding="utf-8"?>
<!--

Copyright 2012 Clayton Smith

This file is part of Ottawa Bus Follower.

Ottawa Bus Follower is free software; you can redistribute it and/or
modify it under the terms of the GNU General Public License as
published by the Free Software Foundation; either version 3, or (at
your option) any later version.

Ottawa Bus Follower is distributed in the hope that it will be
useful, but WITHOUT ANY WARRANTY; without even the implied warranty
of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with Ottawa Bus Follower; see the file COPYING.  If not, see
<http://www.gnu.org/licenses/>.

-->
<resources>
    <string name="app_name">Bus Follower</string>

    <string name="enter_stop">Enter a stop number or name:</string>
    <string name="choose_from_map">Map</string>
    <string name="recent_queries">Recent queries:</string>
    <string name="choose_route">Choose a route:</string>
    <string name="loading">Loading. Please wait&#8230;</string>
    
    <string name="stop_number">Stop</string>
    <string name="route_number">Route</string>
    <string name="update">Update</string>
    <string name="error">Error</string>
    <string name="server_error">The server could not be reached. Please check your network connection.</string>
    <string name="invalid_response">The server returned an unexpected response.  Please try again later.</string>
    <string name="no_trips">There are no upcoming trips for this route.</string>
    <string name="no_routes">There are currently no routes available at this stop.</string>
    <string name="no_departures">There are no departures from this stop.</string>
    <string name="ok">OK</string>
    <string name="open">Open</string>
    <string name="cancel">Cancel</string>
    <string name="menu_refresh">Refresh</string>
    
    <string name="direction">Direction:</string>
    <string name="destination">Destination:</string>
    <string name="start_time">Start time:</string>
    <string name="estimated_arrival">Estimated arrival:</string>
    <string name="scheduled_arrival">Scheduled arrival:</string>
    <string name="estimated">estimated</string>
    <string name="scheduled">scheduled</string>
    <string name="bus_speed">Speed:</string>
    <string name="kph">km/h</string>
    <string name="bus_type">Bus type:</string>
    <string name="last_trip">This is the last trip.</string>
    
    <plurals name="inMinutes">
        <item quantity="one">In %d min</item>
        <item quantity="other">In %d mins</item>
    </plurals>
        <plurals name="minutes">
        <item quantity="one">%d min</item>
        <item quantity="other">%d mins</item>
    </plurals>
    <plurals name="minutesAgo">
        <item quantity="one">%d min ago</item>
        <item quantity="other">%d mins ago</item>
    </plurals>
    
    <string name="length_40">40-foot</string>
    <string name="length_60">60-foot</string>
    <string name="bike_rack">bike rack</string>
    <string name="hybrid">hybrid</string>
    <string name="double_decker">double decker</string>
    
    <string name="invalid_api_key">Invalid API key</string>
    <string name="unable_to_query_data_source">Unable to query data source</string>
    <string name="invalid_stop_number">Invalid stop number</string>
    <string name="invalid_route_number">Invalid route number</string>
</resources>